--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1121,8 +1121,8 @@ section.lazy-placeholder:after {
   background-image: url("../../../assets/images/dreamstime-xxl-83062973-2000x1328.jpg");
 }
 .cid-rRCceWyAjx {
-  background-color: #e4d295;
-  background: linear-gradient(45deg, #e4d295, #232323);
+  background-color: #b2ccd2;
+  background: linear-gradient(45deg, #b2ccd2, #232323);
 }
 .cid-rRCceWyAjx .media-container-row {
   flex-direction: row-reverse;
@@ -1143,6 +1143,62 @@ section.lazy-placeholder:after {
 @media (max-width: 767px) {
   .cid-rRCceWyAjx .mbr-text {
     text-align: center;
+  }
+}
+.cid-rRHsDebjVO {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #b2ccd2;
+}
+.cid-rRHsDebjVO .media-container-column {
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rRHsDebjVO .mbr-author-desc {
+  display: block;
+}
+.cid-rRHsDebjVO .mbr-testimonial {
+  flex-basis: auto;
+  margin-top: 5rem;
+  -webkit-flex-basis: auto;
+}
+.cid-rRHsDebjVO .mbr-testimonial .panel-item {
+  background-color: #149dcc;
+  background: linear-gradient(#149dcc, transparent);
+}
+.cid-rRHsDebjVO .mbr-testimonial .card-block {
+  -webkit-flex-grow: 0;
+  flex-grow: 0;
+  padding: 2rem;
+}
+.cid-rRHsDebjVO .mbr-testimonial .card-block .testimonial-photo {
+  margin-top: -5rem;
+  display: inline-block;
+  width: 120px;
+  height: 120px;
+  margin-bottom: 1.6rem;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.cid-rRHsDebjVO .mbr-testimonial .card-block .testimonial-photo img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+.cid-rRHsDebjVO .mbr-testimonial .card-block p {
+  margin: 0;
+}
+.cid-rRHsDebjVO .mbr-testimonial .card-footer {
+  padding: 0 2rem 2rem 2rem;
+  border-top: 0;
+  word-wrap: break-word;
+  word-break: break-word;
+  background: none;
+}
+@media (max-width: 260px) {
+  .cid-rRHsDebjVO .testimonial-photo {
+    width: 100% !important;
+    height: auto !important;
   }
 }
 .cid-rQyQ1RXkTX {
@@ -1255,65 +1311,9 @@ section.lazy-placeholder:after {
 .cid-rQyUot0P1h H4 {
   color: #232323;
 }
-.cid-rQyYUw6Yb5 {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/person-holding-pencil-white-canvas-116776239-800x533.jpg");
-}
-.cid-rQyYUw6Yb5 .media-container-column {
-  align-items: center;
-  -webkit-align-items: center;
-}
-.cid-rQyYUw6Yb5 .mbr-author-desc {
-  display: block;
-}
-.cid-rQyYUw6Yb5 .mbr-testimonial {
-  flex-basis: auto;
-  margin-top: 5rem;
-  -webkit-flex-basis: auto;
-}
-.cid-rQyYUw6Yb5 .mbr-testimonial .panel-item {
-  background-color: #149dcc;
-  background: linear-gradient(#149dcc, transparent);
-}
-.cid-rQyYUw6Yb5 .mbr-testimonial .card-block {
-  -webkit-flex-grow: 0;
-  flex-grow: 0;
-  padding: 2rem;
-}
-.cid-rQyYUw6Yb5 .mbr-testimonial .card-block .testimonial-photo {
-  margin-top: -5rem;
-  display: inline-block;
-  width: 120px;
-  height: 120px;
-  margin-bottom: 1.6rem;
-  overflow: hidden;
-  border-radius: 50%;
-}
-.cid-rQyYUw6Yb5 .mbr-testimonial .card-block .testimonial-photo img {
-  width: 100%;
-  min-width: 100%;
-  min-height: 100%;
-}
-.cid-rQyYUw6Yb5 .mbr-testimonial .card-block p {
-  margin: 0;
-}
-.cid-rQyYUw6Yb5 .mbr-testimonial .card-footer {
-  padding: 0 2rem 2rem 2rem;
-  border-top: 0;
-  word-wrap: break-word;
-  word-break: break-word;
-  background: none;
-}
-@media (max-width: 260px) {
-  .cid-rQyYUw6Yb5 .testimonial-photo {
-    width: 100% !important;
-    height: auto !important;
-  }
-}
 .cid-rQogfweUry {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-rQogfweUry h4 {
