create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -713,12 +713,12 @@ section.lazy-placeholder:after {
 }
 .cid-rSVm2QUTSi .navbar {
   padding: .5rem 0;
-  background: #333333;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-rSVm2QUTSi .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #ffffff;
 }
 .cid-rSVm2QUTSi a {
   font-style: normal;
@@ -809,7 +809,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rSVm2QUTSi .dropdown .dropdown-menu {
-  background: #333333;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -880,7 +880,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-rSVm2QUTSi button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3217,12 +3217,12 @@ section.lazy-placeholder:after {
 }
 .cid-rSVm2QUTSi .navbar {
   padding: .5rem 0;
-  background: #333333;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-rSVm2QUTSi .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #ffffff;
 }
 .cid-rSVm2QUTSi a {
   font-style: normal;
@@ -3313,7 +3313,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rSVm2QUTSi .dropdown .dropdown-menu {
-  background: #333333;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3384,7 +3384,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-rSVm2QUTSi button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3722,12 +3722,12 @@ section.lazy-placeholder:after {
 }
 .cid-rSVm2QUTSi .navbar {
   padding: .5rem 0;
-  background: #333333;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-rSVm2QUTSi .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #ffffff;
 }
 .cid-rSVm2QUTSi a {
   font-style: normal;
@@ -3818,7 +3818,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rSVm2QUTSi .dropdown .dropdown-menu {
-  background: #333333;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3889,7 +3889,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-rSVm2QUTSi button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4137,12 +4137,12 @@ section.lazy-placeholder:after {
 }
 .cid-rSVm2QUTSi .navbar {
   padding: .5rem 0;
-  background: #333333;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-rSVm2QUTSi .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #ffffff;
 }
 .cid-rSVm2QUTSi a {
   font-style: normal;
@@ -4233,7 +4233,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rSVm2QUTSi .dropdown .dropdown-menu {
-  background: #333333;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -4304,7 +4304,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-rSVm2QUTSi button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4699,12 +4699,12 @@ section.lazy-placeholder:after {
 }
 .cid-rSVm2QUTSi .navbar {
   padding: .5rem 0;
-  background: #333333;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-rSVm2QUTSi .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #ffffff;
 }
 .cid-rSVm2QUTSi a {
   font-style: normal;
@@ -4795,7 +4795,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rSVm2QUTSi .dropdown .dropdown-menu {
-  background: #333333;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -4866,7 +4866,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-rSVm2QUTSi button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -5815,12 +5815,12 @@ section.lazy-placeholder:after {
 }
 .cid-rSVm2QUTSi .navbar {
   padding: .5rem 0;
-  background: #333333;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-rSVm2QUTSi .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #ffffff;
 }
 .cid-rSVm2QUTSi a {
   font-style: normal;
@@ -5911,7 +5911,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rSVm2QUTSi .dropdown .dropdown-menu {
-  background: #333333;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -5982,7 +5982,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-rSVm2QUTSi button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -6942,12 +6942,12 @@ section.lazy-placeholder:after {
 }
 .cid-rSVm2QUTSi .navbar {
   padding: .5rem 0;
-  background: #333333;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-rSVm2QUTSi .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #ffffff;
 }
 .cid-rSVm2QUTSi a {
   font-style: normal;
@@ -7038,7 +7038,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rSVm2QUTSi .dropdown .dropdown-menu {
-  background: #333333;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -7109,7 +7109,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-rSVm2QUTSi button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
