--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -880,7 +880,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #232323;
+  background-color: #ffffff;
 }
 .cid-rSVm2QUTSi button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1273,20 +1273,13 @@ section.lazy-placeholder:after {
     font-size: 20px !important;
   }
 }
-.cid-rQyQ1RXkTX {
-  padding-top: 135px;
-  padding-bottom: 135px;
-  background-image: url("../../../assets/images/dreamstime-xxl-83062973-2000x1328.jpg");
+.cid-rT7tYk5mIH {
+  padding-top: 90px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
 }
-.cid-rQyQ1RXkTX H3 {
-  color: #ffffff;
-}
-.cid-rQyQ1RXkTX H1 {
-  color: #ffffff;
-}
-.cid-rQyQ1RXkTX .mbr-text,
-.cid-rQyQ1RXkTX .mbr-section-btn {
-  color: #ffffff;
+.cid-rT7tYk5mIH P {
+  color: #767676;
 }
 .cid-rQyUot0P1h {
   padding-top: 0px;
@@ -3384,7 +3377,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #232323;
+  background-color: #ffffff;
 }
 .cid-rSVm2QUTSi button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3623,8 +3616,8 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-rSKxCDTWqf {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 75px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-rSKxCDTWqf .title {
@@ -3889,7 +3882,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #232323;
+  background-color: #ffffff;
 }
 .cid-rSVm2QUTSi button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4304,7 +4297,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #232323;
+  background-color: #ffffff;
 }
 .cid-rSVm2QUTSi button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4866,7 +4859,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #232323;
+  background-color: #ffffff;
 }
 .cid-rSVm2QUTSi button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -5982,7 +5975,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #232323;
+  background-color: #ffffff;
 }
 .cid-rSVm2QUTSi button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -7109,7 +7102,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #232323;
+  background-color: #ffffff;
 }
 .cid-rSVm2QUTSi button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
