--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1084,8 +1084,6 @@ section.lazy-placeholder:after {
 .cid-sfzkFMC76y {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #149dcc;
-  background: linear-gradient(45deg, #149dcc, #232323);
 }
 .cid-sfzkFMC76y .media-container-row {
   flex-direction: row-reverse;
@@ -4526,8 +4524,8 @@ section.lazy-placeholder:after {
   pointer-events: none;
 }
 .cid-sfzePxy4ij {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-sfzePxy4ij h2 {
@@ -4573,11 +4571,6 @@ section.lazy-placeholder:after {
 @media (min-width: 992px) {
   .cid-sfzePxy4ij .mbr-figure {
     padding-right: 4rem;
-    padding-right: 0;
-    padding-left: 4rem;
-  }
-  .cid-sfzePxy4ij .media-container-row {
-    -webkit-flex-direction: row-reverse;
   }
 }
 @media (max-width: 991px) {
@@ -4585,13 +4578,6 @@ section.lazy-placeholder:after {
     padding-right: 0;
     padding-bottom: 1rem;
     margin-bottom: 2rem;
-    padding-bottom: 0;
-    margin-bottom: 0;
-    padding-top: 1rem;
-    margin-top: 2rem;
-  }
-  .cid-sfzePxy4ij .media-container-row {
-    -webkit-flex-direction: column-reverse;
   }
 }
 @media (max-width: 300px) {
@@ -4609,6 +4595,26 @@ section.lazy-placeholder:after {
 .cid-sfzePxy4ij P {
   text-align: center;
   color: #232323;
+}
+.cid-sQraMJpwsZ {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-sQraMJpwsZ h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-sQraMJpwsZ p {
+  color: #767676;
+  text-align: left;
+}
+.cid-sQraMJpwsZ .card-box {
+  padding-top: 2rem;
+}
+.cid-sQraMJpwsZ .card-wrapper {
+  height: 100%;
 }
 .cid-sfzePyx4Kk {
   padding-top: 90px;
@@ -5074,8 +5080,6 @@ section.lazy-placeholder:after {
 .cid-sfzq18EHG2 {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #149dcc;
-  background: linear-gradient(45deg, #149dcc, #232323);
 }
 .cid-sfzq18EHG2 .media-container-row {
   flex-direction: row-reverse;
@@ -6179,8 +6183,8 @@ section.lazy-placeholder:after {
   pointer-events: none;
 }
 .cid-si104UuisX {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-si104UuisX h2 {
@@ -6226,11 +6230,6 @@ section.lazy-placeholder:after {
 @media (min-width: 992px) {
   .cid-si104UuisX .mbr-figure {
     padding-right: 4rem;
-    padding-right: 0;
-    padding-left: 4rem;
-  }
-  .cid-si104UuisX .media-container-row {
-    -webkit-flex-direction: row-reverse;
   }
 }
 @media (max-width: 991px) {
@@ -6238,13 +6237,6 @@ section.lazy-placeholder:after {
     padding-right: 0;
     padding-bottom: 1rem;
     margin-bottom: 2rem;
-    padding-bottom: 0;
-    margin-bottom: 0;
-    padding-top: 1rem;
-    margin-top: 2rem;
-  }
-  .cid-si104UuisX .media-container-row {
-    -webkit-flex-direction: column-reverse;
   }
 }
 @media (max-width: 300px) {
@@ -6262,6 +6254,26 @@ section.lazy-placeholder:after {
 .cid-si104UuisX P {
   text-align: center;
   color: #232323;
+}
+.cid-sQrqMeqZt3 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-sQrqMeqZt3 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-sQrqMeqZt3 p {
+  color: #767676;
+  text-align: left;
+}
+.cid-sQrqMeqZt3 .card-box {
+  padding-top: 2rem;
+}
+.cid-sQrqMeqZt3 .card-wrapper {
+  height: 100%;
 }
 .cid-si104W9bsb {
   padding-top: 90px;
